# echo

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: cli_command.hpp  client.hpp  dispatcher.hpp  listener.hpp  response_schema.hpp  response_schema_factory.hpp  server.hpp  socket.hpp  socket_factory.hpp  tokens.hpp
include/CLI/: cli_command.hpp  tokens.hpp
include/client/: client.hpp
include/listener/: dispatcher.hpp  listener.hpp  response_schema.hpp  response_schema_factory.hpp  server.hpp
include/socket/: socket.hpp  socket_factory.hpp
scripts/: build.sh  format.sh  run_tests.sh
src/: CMakeLists.txt  cli_command.cpp  client.cpp  client_main.cpp  dispatcher.cpp  dispatcher_main.cpp  inet_socket.cpp  listener.cpp  main.cpp  response_schema.cpp  response_schema.factory.cpp  server.cpp  server_main.cpp  socket_factory.cpp  tokens.cpp  unix_socket.cpp
src/CLI/: CMakeLists.txt  cli_command.cpp  tokens.cpp
src/client/: CMakeLists.txt  client.cpp  client_main.cpp
src/listener/: CMakeLists.txt  dispatcher.cpp  dispatcher_main.cpp  listener.cpp  response_schema.cpp  response_schema_factory.cpp  server.cpp
src/socket/: CMakeLists.txt  inet_socket.cpp  socket_factory.cpp  unix_socket.cpp
test/: CMakeLists.txt  dispatcher_test.cpp  response_schema_factory_test.cpp  server_test.cpp  tokens_test.cpp
